--- a/preview_buycraft.html
+++ b/preview_buycraft.html
@@ -176,7 +176,7 @@ Need help? Confused about something? Email support@buycraft.net.</p>
       <ul class="payments">
                     <li>
               <div class="avatar">
-                <img src="//cravatar.eu/helmhead/_curious/28" />
+                <img src="http://cravatar.eu/helmhead/_curious/28" />
               </div>
               <div class="info">
                 <div class="ign">
@@ -192,7 +192,7 @@ Need help? Confused about something? Email support@buycraft.net.</p>
             </li>
                     <li>
               <div class="avatar">
-                <img src="//cravatar.eu/helmhead/MedoTheGamer/28" />
+                <img src="http://cravatar.eu/helmhead/MedoTheGamer/28" />
               </div>
               <div class="info">
                 <div class="ign">
@@ -208,7 +208,7 @@ Need help? Confused about something? Email support@buycraft.net.</p>
             </li>
                     <li>
               <div class="avatar">
-                <img src="//cravatar.eu/helmhead/SciFy/28" />
+                <img src="http://cravatar.eu/helmhead/SciFy/28" />
               </div>
               <div class="info">
                 <div class="ign">
@@ -224,7 +224,7 @@ Need help? Confused about something? Email support@buycraft.net.</p>
             </li>
                     <li>
               <div class="avatar">
-                <img src="//cravatar.eu/helmhead/jjhawk011/28" />
+                <img src="http://cravatar.eu/helmhead/jjhawk011/28" />
               </div>
               <div class="info">
                 <div class="ign">
@@ -240,7 +240,7 @@ Need help? Confused about something? Email support@buycraft.net.</p>
             </li>
                     <li>
               <div class="avatar">
-                <img src="//cravatar.eu/helmhead/john180/28" />
+                <img src="http://cravatar.eu/helmhead/john180/28" />
               </div>
               <div class="info">
                 <div class="ign">
@@ -305,7 +305,7 @@ Need help? Confused about something? Email support@buycraft.net.</p>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://example.buycraft.net/templates/209/js/bootstrap.min.js"></script>
-    <script src="http://example.buycraft.nethttp://example.buycraft.net/templates/209/js/skin.min.js"></script>
+    <script src="http://example.buycraft.net/templates/209/js/skin.min.js"></script>
     <script src="http://example.buycraft.net/templates/209/js/site.js"></script>
 
   </body>
