--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link id="themestyle" href="https://raw.githubusercontent.com/rodymol123/MaterialCraft/master/dist/materialcraft.css" rel="stylesheet">
+    <link id="themestyle" href="https://rawgit.com/rodymol123/MaterialCraft/master/dist/materialcraft.css" rel="stylesheet">
 
   </head>
   <body>
@@ -127,10 +127,10 @@
     var blue = document.getElementById("blue");
     var red = document.getElementById("red");
 
-    standard.onclick = function () { swapStyleSheet("https://raw.githubusercontent.com/rodymol123/MaterialCraft/master/dist/materialcraft.css") };
-    dark.onclick = function () { swapStyleSheet("https://raw.githubusercontent.com/rodymol123/MaterialCraft/master/https://raw.githubusercontent.com/rodymol123/MaterialCraft/master/dist/dark/materialcraft_dark.css"); };
-    blue.onclick = function () { swapStyleSheet("https://raw.githubusercontent.com/rodymol123/MaterialCraft/master/dist/blue/materialcraft_blue.css"); };
-    red.onclick = function () { swapStyleSheet("https://raw.githubusercontent.com/rodymol123/MaterialCraft/master/dist/red/materialcraft_red.css"); };
+    standard.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/materialcraft.css") };
+    dark.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/dark/materialcraft_dark.css"); };
+    blue.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/blue/materialcraft_blue.css"); };
+    red.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/red/materialcraft_red.css"); };
     }
 
     window.onload = initate;
