--- a/index.html
+++ b/index.html
@@ -1,140 +1,122 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>MaterialCraft</title>
+  <title>MaterialCraft</title>
 
-    <link href="http://example.buycraft.net/templates/209/css/style.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href="http://example.buycraft.net/templates/209/css/style.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-    <link id="themestyle" href="https://rawgit.com/rodymol123/MaterialCraft/master/dist/materialcraft.css" rel="stylesheet">
+  <link id="themestyle" href="https://rawgit.com/rodymol123/MaterialCraft/master/themes/MaterialCraft/dist/materialcraft.css" rel="stylesheet">
 
-  </head>
-  <body>
+</head>
+<body>
 
-    <div class="container">
+  <div class="container">
 
-      <div class="header">
+    <div class="header">
 
-        <div class="logo">
-                            <a href="/"><span>MaterialCraft</span></a>
-                    </div>
-
-        <div class="buttons">
-          <div class="toolbar">
-            <div class="logout">
-                            </div>
-            <div class="currency">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                Change style <span class="fa fa-caret-down"></span>
-              </button>
-              <ul style="min-width: 100px;" class="dropdown-menu" role="menu">
-                <li><a id="standard" href="#">Standard</a></li>
-                <li><a id="dark" href="#">Dark</a></li>
-                <li><a id="blue" href="#">Blue</a></li>
-                <li><a id="red" href="#">Red</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
+      <div class="logo">
+        <a href="/"><span>MaterialCraft</span></a>
       </div>
 
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">MaterialCraft</a>
+      <div class="buttons">
+        <div class="toolbar">
+          <div class="logout">
           </div>
-
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class=""><a href="https://github.com/rodymol123/MaterialCraft"><i class="fa fa-github"></i> View on GitHub</a></li>
-                <li class=""><a href="https://github.com/rodymol123/MaterialCraft/releases/download/2.2/materialcraft.zip"><i class="fa fa-download"></i> Download</a></li>
+          <div class="currency">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+              Change style <span class="fa fa-caret-down"></span>
+            </button>
+            <ul style="min-width: 100px;" class="dropdown-menu" role="menu">
+              <li><a id="standard" href="#">Standard</a></li>
+              <li><a id="dark" href="#">Dark</a></li>
+              <li><a id="blue" href="#">Blue</a></li>
+              <li><a id="red" href="#">Red</a></li>
             </ul>
           </div>
         </div>
-      </nav>
-
-      <div class="notification">
-
       </div>
 
-      	<div class="body">
-		<div class="content">
-			<div class="panel panel-default">
-				<div class="panel-heading">About</div>
-				<div class="panel-body">
-					<p>
-				  		<p>MaterialCraft is a theme made for both Buycraft and MinecraftMarket... and it's completely free.</p>
+    </div>
+
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">MaterialCraft</a>
+        </div>
+
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class=""><a href="https://github.com/rodymol123/MaterialCraft"><i class="fa fa-github"></i> View on GitHub</a></li>
+            <li class=""><a href="https://github.com/rodymol123/MaterialCraft/releases/download/2.2/materialcraft.zip"><i class="fa fa-download"></i> Download</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="notification">
+
+    </div>
+
+    <div class="body">
+      <div class="content">
+        <div class="panel panel-default">
+          <div class="panel-heading">About</div>
+          <div class="panel-body">
+            <p>
+              <p>MaterialCraft is a theme made for both Buycraft and MinecraftMarket... and it's completely free.</p>
               <p>The theme is based on Google's Material Design Guidelines, it comes in multiple styles wich you can download.</p>
               <br><br>
               <a href="https://github.com/rodymol123/MaterialCraft/releases/download/2.2/materialcraft.zip" class="btn btn-default btn-lg" >Download</a>
-					</p>
-          <p>
+            </p>
+            <p>
               <a href="#" class="btn btn-default" >Button</a>
               <a href="#" class="btn btn-primary" >Button</a>
               <a href="#" class="btn btn-info" >Button</a>
               <a href="#" class="btn btn-success" >Button</a>
               <a href="#" class="btn btn-warning" >Button</a>
               <a href="#" class="btn btn-danger" >Button</a>
-          </p>
-				</div>
-			</div>
-		</div>
-		<div class="sidebar">
-<div class="panel panel-default">
-    <div class="panel-heading">Style selector</div>
-    <div class="panel-body">
-        <p>
-     		<p>To preview all the different MaterialCraft styles just click on the dropdown menu in the top-right corner.</p>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="sidebar">
+        <div class="panel panel-default">
+          <div class="panel-heading">Style selector</div>
+          <div class="panel-body">
+            <p>
+              <p>To preview all the different MaterialCraft styles just click on the dropdown menu in the top-right corner.</p>
 
-     	</p>
-    </div>
-</div>
-		</div>
-	</div>
-
-
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="modal" id="popup-modal" tabindex="-1" role="dialog"></div>
+
+  </div>
+
+  <div class="modal" id="popup-modal" tabindex="-1" role="dialog"></div>
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="http://example.buycraft.net/templates/209/js/bootstrap.min.js"></script>
-    <script>
-    function swapStyleSheet(sheet) {
-    document.getElementById("themestyle").setAttribute("href", sheet);
-    }
-    function initate() {
-    var standard = document.getElementById("standard");
-    var dark = document.getElementById("dark");
-    var blue = document.getElementById("blue");
-    var red = document.getElementById("red");
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="http://example.buycraft.net/templates/209/js/bootstrap.min.js"></script>
+  <script src="materialcraft-demo.js"></script>
 
-    standard.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/materialcraft.css") };
-    dark.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/dark/materialcraft_dark.css"); };
-    blue.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/blue/materialcraft_blue.css"); };
-    red.onclick = function () { swapStyleSheet("https://rawgit.com/rodymol123/MaterialCraft/master/dist/red/materialcraft_red.css"); };
-    }
-
-    window.onload = initate;
-    </script>
-
-  </body>
+</body>
 </html>
