--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <link id="themestyle" href="https://rawgit.com/rodymol123/MaterialCraft/master/themes/MaterialCraft/dist/materialcraft.css" rel="stylesheet">
+  <link id="themestyle" href="https://cdn.rawgit.com/rodymol123/MaterialCraft/master/themes/MaterialCraft/dist/materialcraft.css" rel="stylesheet">
 
 </head>
 <body>
