Add Purple flavour

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             </button>
             <ul style="min-width: 100px;" class="dropdown-menu" role="menu">
               <li><a id="standard" href="#">Standard</a></li>
-              <li><a id="dark" href="#">Dark</a></li>
               <li><a id="blue" href="#">Blue</a></li>
+              <li><a id="dark" href="#">Dark</a></li>
+              <li><a id="purple" href="#">Purple</a></li>
               <li><a id="red" href="#">Red</a></li>
             </ul>
           </div>
