Fix download links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class=""><a href="https://github.com/rodymol123/MaterialCraft"><i class="fa fa-github"></i> View on GitHub</a></li>
-            <li class=""><a href="https://github.com/rodymol123/MaterialCraft/releases/download/2.2/materialcraft.zip"><i class="fa fa-download"></i> Download</a></li>
+            <li class=""><a href="https://github.com/rodymol123/MaterialCraft/archive/master.zip"><i class="fa fa-download"></i> Download</a></li>
           </ul>
         </div>
       </div>
@@ -83,7 +83,7 @@
               <p>MaterialCraft is a theme made for both Buycraft and MinecraftMarket... and it's completely free.</p>
               <p>The theme is based on Google's Material Design Guidelines, it comes in multiple styles wich you can download.</p>
               <br><br>
-              <a href="https://github.com/rodymol123/MaterialCraft/releases/download/2.2/materialcraft.zip" class="btn btn-default btn-lg" >Download</a>
+              <a href="https://github.com/rodymol123/MaterialCraft/archive/master.zip" class="btn btn-default btn-lg" >Download</a>
             </p>
             <p>
               <a href="#" class="btn btn-default" >Button</a>
