Add green and yellow

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
               <li><a id="dark" href="#">Dark</a></li>
               <li><a id="purple" href="#">Purple</a></li>
               <li><a id="red" href="#">Red</a></li>
+              <li><a id="green" href="#">Green</a></li>
+              <li><a id="yellow" href="#">Yellow</a></li>
             </ul>
           </div>
         </div>
