--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <link id="themestyle" href="https://cdn.rawgit.com/rodymol123/MaterialCraft/master/dist/materialcraft.css" rel="stylesheet">
+  <link id="themestyle" href="https://rawgit.com/rodymol123/MaterialCraft/master/dist/materialcraft.css" rel="stylesheet">
 
 </head>
 <body>
@@ -97,6 +97,84 @@
             </p>
           </div>
         </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">Memberships</div>
+          <div class="panel-body">
+            <div class="category">
+              <div class="packages-image">
+                <div class="package">
+                  <div class="image">
+                    <a href="javascript:void(0);" data-remote="/package/405670" class="toggle-modal">
+                      <img src="https://dunb17ur4ymx4.cloudfront.net/packages/images/e8c99e7134664b900eddb1528ee86735f0e57ef5.png" class="toggle-tooltip img-rounded" title="" data-original-title="Click for more details">
+                    </a>
+                  </div>
+                  <div class="info">
+                    <div class="text">
+                      <div class="name">Gold VIP</div>
+                      <div class="price">
+                      </div>
+                    </div>
+                    <div class="button">
+                      <a href="javascript::void(0);" data-remote="/package/405670" class="btn btn-sm btn-info btn-block toggle-modal">Buy</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="package">
+                  <div class="image">
+                    <a href="javascript:void(0);" data-remote="/package/405671" class="toggle-modal">
+                      <img src="https://dunb17ur4ymx4.cloudfront.net/packages/images/4b9ce525133ac80f760f64645f462629a3ff4f8d.png" class="toggle-tooltip img-rounded" title="" data-original-title="Click for more details">
+                    </a>
+                  </div>
+                  <div class="info">
+                    <div class="text">
+                      <div class="name">Diamond VIP</div>
+                      <div class="price">
+                        8.61 <small>CAD</small>
+                      </div>
+                    </div>
+                    <div class="button">
+                      <a href="javascript::void(0);" data-remote="/package/405671" class="btn btn-sm btn-info btn-block toggle-modal">Buy</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="package">
+                  <div class="image">
+                    <a href="javascript:void(0);" data-remote="/package/405667" class="toggle-modal">
+                      <img src="https://dunb17ur4ymx4.cloudfront.net/packages/images/c3a4c87e8c588a08442a1a6404287f9d79e294a3.png" class="toggle-tooltip img-rounded" title="" data-original-title="Click for more details">
+                    </a>
+                  </div>
+                  <div class="info">
+                    <div class="text">
+                      <div class="name">Wood VIP</div>
+                      <div class="price">
+                      </div>
+                    </div>
+                    <div class="button">
+                      <a href="javascript::void(0);" data-remote="/package/405667" class="btn btn-sm btn-info btn-block toggle-modal">Buy</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="package">
+                  <div class="image">
+                    <a href="javascript:void(0);" data-remote="/package/405672" class="toggle-modal">
+                      <img src="https://dunb17ur4ymx4.cloudfront.net/packages/images/063b5e43cedcf75e8a81e13d8b7460edcf862051.png" class="toggle-tooltip img-rounded" title="" data-original-title="Click for more details">
+                    </a>
+                  </div>
+                  <div class="info">
+                    <div class="text">
+                      <div class="name">Iron VIP</div>
+                      <div class="price">
+                      </div>
+                    </div>
+                    <div class="button">
+                      <a href="javascript::void(0);" data-remote="/package/405672" class="btn btn-sm btn-info btn-block toggle-modal">Buy</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="sidebar">
         <div class="panel panel-default">
@@ -119,6 +197,7 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://example.buycraft.net/templates/209/js/bootstrap.min.js"></script>
+  <script src="http://example.buycraft.net/templates/209/js/site.js"></script>
   <script src="materialcraft-demo.js"></script>
 
 </body>
